# UCR-eBPF

./: .gitignore  README.md  env_setup.sh  update_kernel.sh  update_kernel_bak.sh  update_system.sh
fake_function_chain/: bounce  bounce.cpp  bounce_kern.c  build.sh  communicator.cpp  communicator.h  config.h  context.cpp  context.h  function  function.cpp  gateway  gateway.cpp  meta.h  nanotime.cpp  nanotime.h  queue.h  rx_kern.c  setup_network.sh  shared_includes.h  util.cpp  util.h
kubernetes_update/: chain0  chain0.c  chain1  chain1.c
serverless_prototype/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  FunMain.cpp  GatewayMain.cpp  RpcClient.cpp  RpcServer.cpp  RpcServer.h  Server.cpp  Server.h  SkmsgClient.cpp  SkmsgClient.h  SkmsgServer.cpp  SkmsgServer.h  UmemClient.cpp  UmemClient.h  UmemServer.cpp  UmemServer.h  commands.txt  config.h  nanotime.cpp  nanotime.h  queue.h  rpc.h  rx_kern.c  shared_includes.h  sk_msg_kern.c  util.cpp  util.h
test/: afxdp_user.c  env_setup.sh  kern.c  sync_files.sh  test_setup.sh  update_kernel.sh  xsk_test  xsk_test.c
test/docker/: Dockerfile  client  env_setup_veth.sh  init.Dockerfile  libbpf.so.0  manager  results.txt  run_docker.sh  xdp.yaml
test/knative/: client  helloworld.go  setup_veth.sh  test.sh  xdp.yaml
test/prototype/: extra_definitions.h  kern.c  test_setup.sh  xsk_test.c
test/share_mem/: build.sh  main  main.c  main2  main2.c  share.c
test/share_umem/: build.sh  extra_definitions.h  kern.c  manager  manager.c  manager.cxx  pkt_generator.py  pkt_receiver.py  worker  worker.c  xsk_test  xsk_test.c
test/socket_test/: build.sh  client  client.c  client.cpp  server  server.c  server.cpp
test/xsk_bounce/: bounce  build.sh  client  client.cpp  client_lib.cpp  communication.cpp  communication.h  config.h  manager  manager.cpp  nanotime.cpp  nanotime.h  program.cpp  program.h  queue.h  results.txt  rx_kern.c  shared_definitions.h  sock.cpp  sock.h  umem.cpp  (+3 more)
(+11 files in other folders)
